# https://pypi.org/project/setupcfg-generator/
[metadata]
name = imlazy
version = 1.00
url = https://github.com/smeggingsmegger/imlazy
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = helpful misc utilities

[options]
install_requires =
	setuptools
packages =
	imlazy
scripts = 
    bin/dockerssh
	bin/dockerstop
	bin/dockerrm
