# https://pypi.org/project/setupcfg-generator/
[metadata]
name = imlazy
version = 1.3.1.1
url = https://github.com/smeggingsmegger/imlazy
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = helpful misc utilities

[options]
install_requires =
	setuptools
packages =
	imlazy
scripts =
    bin/dcu
    bin/dockerssh
	bin/dockerstop
	bin/dockerrm
	bin/dockerlist
	bin/pipit
